# Lightwave-object-loader

./: CMakeLists.txt  LICENSE.txt  LWO_reader.sln  LWO_reader.vcxproj  LwoObjectData.cpp  LwoObjectData.h  LwoReader.cpp  LwoReader.h  LwoTags.h  MemFile.cpp  MemFile.h  README.txt  main.cpp
